lab1/Test/L1-A-8-15.cmm
struct FHvEy01vxIaV {
};
float XjePi5kc65CsLh1u [ 10665397 ] 
;
int YbNuLrK ( int pgXL9_qU_DBHREIAf , int ZdUOXG2z_d6 
  ) {
  int UxjGd50dczfGfVNrgEwk = lLWAqqQVbZYZdfv , JZGYxmZ6m 
    return ;
  while ( MFRDhTOxYsFn )   mtmKmm = u7W9P11EsEyC8U7RM_A 
    >= jk0ttESoJmRLeMFESjW + - ! ! cwNU6menIDVkilwJNgaO 
    ( d1uO || pz38 && _R6xd3G_yn4E9 != QBVjRB0a_ - dKIjNiqYi3IF_NcD_AW 
    / jeCQXBwcHbtbM [ FOtV8RriRrHLVUTCTIES == ! ! M ( 
    QsdA59 , ZBH = uuJV = p9rupZ8CPtvj = cp0C = nAkB8GuS4bRVlF 
    && UJHtkK <= D1v3bBbl3S - WgIp [ wFdhmtcJeGoSDVLjQp 
    ( rM5KvXg4n , Hkyx && uEs > - g0QuzQrTbxjjYUt ( OCLmtzsnestmy2SP3ho 
    = vgF5Olnk < pVsu6ouHHKR - ! ! - - frm0HagEQUIWY5HW 
    [ s7_49i4Z6p3dr || qBmVM6uTkbMn6jsGN3AS ( yEU >= uR9LuLH1mOFG0WTgvu 
    >= [ HqMOPMQ / ( NWpTp4mYB = h1 || ibwz7yW <= _OAIs6Tp 
    + Ng7I0V1SXK0 / ! - 1657949804 ) ] ) ] ) . lK4VB_Tkqrot5c8O 
    ) . jg5FUDkGAcefLEobt28 . ON5QjuSNWJIW38ipPy = 1587736194.288964407 
    ] ) ] * Vj9eQ ( ) ) / xIPsZ_xSl . j ;
>= 
}
int dxh197qlFmm0ji , E6dy76DrvvU7DJG2liU5 

;
int dReSgcfcKxm_U7IlSA ( ) {
  struct {
    int gJrJ0tr_7 ;
    int fuibCWwcp ;
    int imSm2qcKE7z0OiEYBph ;
    int _kkLFmLn6Y3R2TD ;
    struct {
      struct Y4 yHJXg8ARHnkFnUgJApK ;
      int Gt9hKK9QO5FBXXdieRo2 ;
      struct chyphX ti ;
    }ZwJJGZzcYooyY1o4 ;
    int _9hG0PUaFGjLPrNM3zlF ;
  }qJ4H_3N2fTQXdH ;
  if ( jTQlykW7T )   if ( Ae )   TLErw ;
else   return fROPvqDlr ;

else   if ( jqDvnO yltwcS )   if ( vYunYpeW6Vy_cU 
    ) {
    struct FwmOWDTj9iE9f blyCAbHbTbrX ;
  }


}
= 